--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-template-full-react-ts",
-  "version": "0.1.0-alpha",
+  "version": "0.1.0-alpha.0",
   "keywords": [
     "react",
     "create-react-app",
